syntax = "proto3";

package soa.serialization;

option java_package = "me.darkkeks.soa.serialization.proto";
option java_multiple_files = true;

message ClientData {
  int64 id = 1;
  string name = 2;
  repeated Campaign campaigns = 3;
  repeated AdGroup ad_groups = 4;
  repeated Banner banners = 5;
}

message Campaign {
  int64 id = 1;
  Strategy strategy = 2;
  optional string href = 3;
}

message Strategy {
  int32 type = 1;
  string data = 2;
}

message AdGroup {
  int64 id = 1;
  int64 campaign_id = 2;

  repeated int64 regions = 3;
  repeated string keywords = 4;
  repeated Multiplier multipliers = 5;
}

message Multiplier {
  string condition = 1;
  int32 multiplier = 2;
}

message Banner {
  int64 id = 1;
  int64 ad_group_id = 2;

  string text1 = 3;
  optional string text2 = 4;

  optional string image = 5;

  repeated Link links = 6;
  repeated double prices = 7;
}

message Link {
  string href = 1;
  string text = 2;
}


